Fix for OpenJDK 21